force-app/main/default/objects/LVC_DeliveryRoute__c/LVC_DeliveryRoute__c.object-meta.xml
<CustomObject>
    <label>Ruta de Reparto</label>
    <nameField>
        <displayFormat>DR-{00000000}</displayFormat>
        <label>LVC_DeliveryRoute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ruta de Reparto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>