force-app/main/default/objects/LVC_DeliveryRoute__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fletero Id</label>
    <referenceTo>LVC_Delivery__c</referenceTo>
    <relationshipLabel>Ruta de Reparto</relationshipLabel>
    <relationshipName>DeliveryRoutes</relationshipName>
    <type>Lookup</type>
</CustomField>