force-app/main/default/objects/LVC_DeliveryRoute__c/fields/DeliverySchedule__c.field-meta.xml
<CustomField>
    <fullName>DeliverySchedule__c</fullName>
    <label>Horario Entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Mañana 08:00 a 13:00</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Día 09:00 a 16:00</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Mañana 08:00 a 11:00</label>
            </value>
            <value>
                <fullName>T</fullName>
                <isActive>false</isActive>
                <label>Tarde 14:00 a 18:00</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>