force-app/main/default/objects/LVC_DeliveryRoute__c/fields/RouteId__c.field-meta.xml
<CustomField>
    <fullName>RouteId__c</fullName>
    <label>Reparto Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>