force-app/main/default/objects/LVC_DeliveryRoute__c/fields/Thursday__c.field-meta.xml
<CustomField>
    <fullName>Thursday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jueves</label>
    <type>Checkbox</type>
</CustomField>