force-app/main/default/objects/LVC_DeliveryRoute__c/fields/Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Wednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Miercoles</label>
    <type>Checkbox</type>
</CustomField>